# fast_madr

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  env.exemple  fly.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 09444f42c4b6_mudando_o_nome_do_novo_campo.py  2100d87b4995_adicionando_caminho_para_foto_de_perfil.py  4e23b807f740_att_com_o_campo_da_tabela_book.py  7216ae07d82c_adiciona_novo_campo_file_book_na_tabela_.py  7aababcf0d93_att_book_fk_novelist.py  a4a8f704301e_initial_migration_all_tables.py  c692f2155ba1_att_tab_novelist.py  d3f1aa8241cf_att_do_campo_book_cover.py  dac50c7f4aae_att_tab_book.py  db92803d0ac5_atualizado_o_campo_profile_picture_para_.py  f2b2ff9347e6_adicionando_tabelas_novelist_e_books.py
fast_madr/: main.py  models.py  schema.py  security.py
fast_madr/core/: config.py  database.py  security.py  settings.py
fast_madr/routers/: books.py  profile_user.py  token.py  upload.py  users.py
fast_madr/schemas/: book_schema.py  user_schema.py
fast_madr/static/css/: create_book.css  form_register_and_login.css  header.css  home.css  login.css  modal_book.css  modal_styles.css  profile.css
fast_madr/static/js/: create_book.js  home.js  home_book.js  login.js  nav-logged-user.js  page_book.js  profile.js  profile_book_list.js  register.js  validation.js
fast_madr/templates/: home.html  index.html  profile.html
fast_madr/templates/auth/: login.html  profile.html  register.html
tests/: conftest.py  test_books.py  test_security.py  test_token.py  test_users.py
